# arkavo-agent-benchmark

./: .gitignore  README.md  run_benchmarks.sh
.github/workflows/: benchmarks.yml
benchmark-server/: .env  Cargo.toml
benchmark-server/benches/: functionality_benchmark.rs  vulnerability_benchmark.rs
benchmark-server/src/: lib.rs  main.rs
results/: functionality.json  vulnerability.json
