[package]
name = "benchmark-server"
version = "0.1.0"
edition = "2024"

[lib]
bench = false

[[bin]]
name = "benchmark-server"
path = "src/main.rs"

[[bench]]
name = "functionality_benchmark"
harness = false

[[bench]]
name = "vulnerability_benchmark"
harness = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0.0" # Deliberately old version with known CVEs
dotenv = "0.15.0"
mongodb = "1.2.0" # Old vulnerable version
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.5.0", features = ["postgres", "runtime-tokio-native-tls"] } # Old version with SQL injection risks

[dev-dependencies]
criterion = "0.4"
